Fix main-header with align-center and main-layout with 1fr

--- a/styles/basics/layout.css
+++ b/styles/basics/layout.css
@@ -2,7 +2,7 @@
 
 .main-layout {
   display: grid;
-  grid-template-columns: minmax(auto, 260px) minmax(auto, 980px) minmax(auto, 260px);
+  grid-template-columns: minmax(auto, 1fr) minmax(auto, 980px) minmax(auto, 1fr);
   justify-content: center;
   align-items: center;
 }
